@@ -27,5 +27,5 @@ public class ApplicationScopeLifeCycleListener extends AbstractApplicationScopeL
 	
 	/**/
 	
-	public static final Integer LEVEL = new Integer(org.cyk.utility.client.controller.ApplicationScopeLifeCycleListener.LEVEL+1);
+	public static final Integer LEVEL = Integer.valueOf(org.cyk.utility.client.controller.ApplicationScopeLifeCycleListener.LEVEL+1);
 }
